--- a/src/App/components/tile/Tile.module.scss
+++ b/src/App/components/tile/Tile.module.scss
@@ -7,7 +7,7 @@ $piece-size: $tile-size - 20px;
   place-content: center;
   width: $tile-size;
   height: $tile-size;
-  background-color: rgb(255, 158, 158);
+  background-color: rgb(252, 180, 180);
 }
 
 .tile-black {
@@ -16,6 +16,14 @@ $piece-size: $tile-size - 20px;
   width: $tile-size;
   height: $tile-size;
   background-color: rgb(80, 56, 56);
+}
+
+.tile-available {
+  display: grid;
+  place-content: center;
+  width: $tile-size;
+  height: $tile-size;
+  background-color: rgba(25, 0, 255, 0.568);
 }
 
 .piece {
