--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -1,3 +1,14 @@
 .app {
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-image: url("./assets/background/background.svg");
+
+  -webkit-background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -moz-background-size: cover;
 }
